# google-scholar-mcp

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  DEPLOY.md  DOCKER.md  Dockerfile  README.md  README_ZH.md  RELEASE_NOTES.md  SECURITY.md  check-security.sh  docker-compose.yml  env.example  google_scholar_server.py  google_scholar_web_search.py  pyproject.toml  requirements.txt
client/: index.ts  package-lock.json  package.json
server/: Dockerfile  package-lock.json  package.json
server/src/: google-scholar-search.ts  index.ts  server.ts  tools.ts
src/google_scholar_mcp/: __init__.py  __main__.py  server.py
