[project]
name = "google-scholar-mcp"
version = "0.3.0"
description = "Google Scholar MCP Server with ScrapingDog and SerpAPI support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "scholarly>=1.7.0",
    "requests>=2.31.0",
    "google-search-results>=2.4.2",
]

[[project.authors]]
name = "Developer"
email = "dev@example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
google-scholar-mcp = "google_scholar_server_api:main"
